# Red-DiscordBot

./: .gitignore  README.md  make.bat  pyproject.toml  setup.cfg  setup.py  start.bat
.github/workflows/: tests.yml
bluebot/: __init__.py  __main__.py  launcher.py  logging.py  meta.py  setup.py
bluebot/cogs/admin/: __init__.py  admin.py  announcer.py  converters.py
bluebot/cogs/alias/: __init__.py  alias.py  alias_entry.py
bluebot/cogs/audio/: __init__.py  audio_dataclasses.py  converters.py  equalizer.py  errors.py  manager.py  sql_statements.py  utils.py
bluebot/cogs/audio/apis/: __init__.py  api_utils.py  global_db.py  interface.py  local_db.py  persist_queue_wrapper.py  playlist_interface.py  playlist_wrapper.py  spotify.py  youtube.py
bluebot/cogs/audio/core/: __init__.py  abc.py  cog_utils.py
bluebot/cogs/cleanup/: __init__.py  checks.py  cleanup.py  converters.py
bluebot/cogs/customcom/: __init__.py  customcom.py
bluebot/cogs/downloader/: __init__.py  checks.py  converters.py  downloader.py  errors.py  info_schemas.py  installable.py  json_mixins.py  log.py  repo_manager.py
bluebot/cogs/economy/: __init__.py  converters.py  economy.py
bluebot/cogs/filter/: __init__.py  filter.py
bluebot/cogs/general/: __init__.py
bluebot/cogs/image/: __init__.py  image.py
bluebot/cogs/mod/: __init__.py  abc.py  events.py  kickban.py  mod.py  names.py  settings.py  slowmode.py  utils.py
bluebot/cogs/modlog/: __init__.py  modlog.py
bluebot/cogs/mutes/: __init__.py  abc.py  converters.py  mutes.py  voicemutes.py
bluebot/cogs/permissions/: __init__.py  converters.py  permissions.py
bluebot/cogs/reports/: __init__.py  reports.py
bluebot/cogs/streams/: __init__.py  errors.py  streams.py  streamtypes.py
bluebot/cogs/trivia/: __init__.py  checks.py  converters.py  log.py  session.py  trivia.py
bluebot/cogs/warnings/: __init__.py  helpers.py  warnings.py
bluebot/core/: __init__.py  _diagnoser.py  _sharedlibdeprecation.py  bank.py  bot.py  checks.py  cli.py  cog_manager.py  config.py  core_commands.py  data_manager.py  dev_commands.py  errors.py  events.py  generic_casetypes.py  global_checks.py  i18n.py  modlog.py  rpc.py  settings_caches.py
bluebot/core/commands/: __init__.py  _dpy_reimplements.py  commands.py  context.py  converter.py  errors.py  help.py  requires.py
bluebot/core/drivers/: __init__.py  _mongo.py  base.py  json.py  log.py
bluebot/core/drivers/postgres/: __init__.py  (+1 more)
bluebot/core/utils/: __init__.py  _internal_utils.py  antispam.py  caching.py  common_filters.py  dbtools.py  embed.py  menus.py  mod.py  predicates.py  safety.py  tunnel.py
bluebot/pytest/: alias.py  cog_manager.py  data_manager.py  downloader.py  economy.py  mod.py  permissions.py  rpc.py
docs/: conf.py  version_guarantees.rst
docs/_ext/: deprecated_removed.py
docs/install_guides/: centos-7.rst  centos-stream-9.rst  fedora.rst  mac.rst  ubuntu-2004.rst  ubuntu-non-lts.rst  windows.rst
docs/install_guides/_includes/: install-python-pyenv.rst  install-python39-pyenv.rst
redbot/: __init__.py  __main__.py  logging.py
redbot/cogs/permissions/: permissions.py
redbot/cogs/trivia/: trivia.py
redbot/core/: bot.py  cli.py  core_commands.py  modlog.py  rpc.py  settings_caches.py
redbot/core/commands/: __init__.py
redbot/core/utils/: _internal_utils.py  tunnel.py
requirements/: base.in  base.txt  extra-docs.txt  extra-postgres.txt  extra-style.txt  extra-test.txt
tests/: conftest.py
tests/cogs/: test_alias.py  test_economy.py  test_mod.py  test_permissions.py  test_trivia.py
tests/cogs/downloader/: test_downloader.py  test_git.py  test_installable.py
tests/core/: test_cog_manager.py  test_commands.py  test_config.py  test_data_manager.py  test_installation.py  test_rpc.py  test_version.py
tools/: bumpdeps.py  edit_testrepo.py  primary_deps.ini
(+35 files in other folders)
