[metadata]
name = Red-DiscordBot
description = A highly customisable Discord bot
license = GPL-3.0
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
author = Cog-Creators
author_email = cogcreators@gmail.com
url = https://github.com/Cog-Creators/Red-DiscordBot
project_urls =
    Discord Server = https://discord.gg/red
    Documentation = https://docs.discord.red
    Donate on Patreon = https://www.patreon.com/Red_Devs
    Issue Tracker = https://github.com/Cog-Creators/Red-DiscordBot/issues
    Source Code = https://github.com/Cog-Creators/Red-DiscordBot
classifiers =
    # List at https://pypi.org/pypi?%3Aaction=list_classifiers
    Development Status :: 5 - Production/Stable
    Framework :: AsyncIO
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Communications :: Chat
license_files =
    LICENSE
    redbot/**/*.LICENSE

[options]
packages = find_namespace:
python_requires = >=3.8.1,<3.11
include_package_data = True
install_requires =
    aiohttp==3.8.1
    aiohttp-json-rpc==0.13.3
    aiosignal==1.2.0
    apsw-wheels==3.36.0.post1
    async-timeout==4.0.2
    attrs==21.4.0
    Babel==2.9.1
    charset-normalizer==2.0.12
    click==8.1.2
    commonmark==0.9.1
    contextlib2==21.6.0
    discord.py @ git+https://github.com/Rapptz/discord.py@3d914e08e0c7df370987592affb3655d2a12f7d1#egg=discord.py
    distro==1.7.0; sys_platform == "linux"
    frozenlist==1.3.0
    idna==3.3
    importlib-metadata==4.11.3
    jarowinkler==1.0.4
    Markdown==3.3.6
    multidict==6.0.2
    orjson==3.6.7
    platformdirs==2.5.1
    psutil==5.9.0
    Pygments==2.11.2
    python-dateutil==2.8.2
    pytz==2022.1
    PyYAML==6.0
    rapidfuzz==2.0.14
    Red-Commons==1.0.0
    Red-Lavalink==0.11.0rc0
    rich==12.2.0
    schema==0.7.5
    six==1.16.0
    typing_extensions==4.1.1
    uvloop==0.16.0; sys_platform != "win32" and platform_python_implementation == "CPython"
    yarl==1.7.2
    zipp==3.8.0

[options.extras_require]
docs =
    alabaster==0.7.12
    certifi==2021.10.8
    docutils==0.17.1
    imagesize==1.3.0
    Jinja2==3.1.1
    MarkupSafe==2.1.1
    packaging==21.3
    pyparsing==3.0.7
    requests==2.27.1
    snowballstemmer==2.2.0
    Sphinx==4.5.0
    sphinx-prompt==1.5.0
    sphinx-rtd-theme==1.0.0
    sphinxcontrib-applehelp==1.0.2
    sphinxcontrib-devhelp==1.0.2
    sphinxcontrib-htmlhelp==2.0.0
    sphinxcontrib-jsmath==1.0.1
    sphinxcontrib-qthelp==1.0.3
    sphinxcontrib-serializinghtml==1.1.5
    sphinxcontrib-trio==1.1.2
    urllib3==1.26.9
postgres =
    asyncpg==0.25.0
style =
    black==22.3.0
    mypy-extensions==0.4.3
    pathspec==0.9.0
    tomli==2.0.1
test =
    astroid==2.11.2
    dill==0.3.4
    iniconfig==1.1.1
    isort==5.10.1
    lazy-object-proxy==1.7.1
    mccabe==0.7.0
    packaging==21.3
    pluggy==1.0.0
    py==1.11.0
    pylint==2.13.5
    pyparsing==3.0.7
    pytest==7.1.1
    pytest-asyncio==0.18.3
    pytest-mock==3.7.0
    tomli==2.0.1
    wrapt==1.14.0
all =
    %(postgres)s
dev =
    %(all)s
    %(docs)s
    %(style)s
    %(test)s

[options.entry_points]
console_scripts =
    redbot=redbot.__main__:main
    redbot-setup=redbot.setup:run_cli
    redbot-launcher=redbot.launcher:main
pytest11 =
    red-discordbot=redbot.pytest

[options.packages.find]
include =
    redbot
    redbot.*
